project card margins fix on smaller screens

--- a/app/scss/pages/_projects.scss
+++ b/app/scss/pages/_projects.scss
@@ -100,6 +100,38 @@
   }
 }
 
+@media (max-width: 227px) {
+  .projects {
+    .card-content-wrapper {
+      // p {
+      //   margin: 0 !important;
+      // }
+      // a {
+      //   &:first-child {
+      //     margin-bottom: 0.1rem !important;
+      //   }
+        button {
+          padding: 0 !important;
+        }
+      }
+    }
+}
+
+@media (max-width: 292px) {
+  .projects {
+    .card-content-wrapper {
+      p {
+        margin: 0 !important;
+      }
+      a {
+        &:first-child {
+          margin-bottom: 0.1rem !important;
+        }
+      }
+    }
+  }
+}
+
 @media (max-width: 335px) {
   .projects {
     .gif-wrapper {
